tests/errors/preprocessor/temporarily_unemployed/multifile/no_guard/include/source/lib1.c

int h1()
{
    return 3;
}